test-data/unit/cmdline-based.test
[case testIgnoreMissingPyTyped]
# cmd: mypy main.py
[file main.py]
from a import x
from b import y
[file mypy.ini]
\[mypy]
\[mypy-a]
ignore_missing_py_typed = true
[file pypath/a/__init__.py]
x = 0
[file pypath/b/__init__.py]
y = 0
[out]
main.py:2:1: error: Skipping analyzing "b": module is installed, but missing library stubs or py.typed marker. To work around this error, see the 'ignore_missing_py_typed' option  [import-untyped]
main.py:2:1: note: See https://kotlinisland.github.io/basedmypy/running_mypy.html#missing-imports


[case testIgnoreMissingPyTypedDontClobberStubs]
# cmd: mypy --ignore-missing-py-typed main.py
[file main.py]
from a import x
reveal_type(x)
[file pypath/a/__init__.py]
x = 0
[file pypath/a-stubs/__init__.pyi]
x: str
[out]
main.py:2:13: note: Revealed type is "str"
== Return code: 0


[case testIgnoreMissingPyTypedWithPyTyped]
# cmd: mypy --ignore-missing-py-typed main.py
[file main.py]
from a import x
reveal_type(x)
[file pypath/a/__init__.py]
x = 0
[file pypath/a/py.typed]
[out]
main.py:2:13: note: Revealed type is "int"
== Return code: 0


[case testIdeCodes]
# cmd: mypy --ide main.py
[file main.py]
1 + ""
1 + ""
[out]
main.py:1:5:1:6: error: Unsupported operand types for + ("int" and "str")  [operator]
main.py:1:5:1:6: note: See https://kotlinisland.github.io/basedmypy/_refs.html#code-operator for more info
main.py:2:5:2:6: error: Unsupported operand types for + ("int" and "str")  [operator]
main.py:2:5:2:6: note: See https://kotlinisland.github.io/basedmypy/_refs.html#code-operator for more info
